--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "canvas-confetti": "^1.9.2",
     "framer-motion": "^11.0.28",
     "next": "14.2.1",
